--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -30,7 +30,7 @@
               <option value="other" selected>other</option>
             </select> <br><br>
             <label for="message">Enter Your Message:</label><br>
-            <textarea name="message" rows="10" cols="30">Type Message Here</textarea><br>
+            <textarea name="message" id="message" rows="10" cols="30">Type Message Here</textarea><br>
             <input type="submit" value="Submit">
         </form>
     
