--- a/lab09/contact.html
+++ b/lab09/contact.html
@@ -29,9 +29,7 @@
         </div>
         <div class="clear"></div>
         <div class="secondrow">
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.756469600322!2d-76.13400308471782!3d43.04655517914676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a761bd0b81%3A0x2b9129d843ac90a9!2s505%20Walnut%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1599511233820!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </div>
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.756469600322!2d-76.13400308471782!3d43.04655517914676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a761bd0b81%3A0x2b9129d843ac90a9!2s505%20Walnut%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1599511233820!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <br><br>
             <div class="emailform">
                 <form action="mailto:eccorn@syr.edu" method="post">
