--- a/lab09/index.html
+++ b/lab09/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <nav>
-            <a class="menu" href="index.html">Home</a> | 
-            <a class="menu" href="skills.html">Skills</a> | 
+            <a class="menu" href="index.html">Home</a><span class="line"> |</span> 
+            <a class="menu" href="skills.html">Skills</a><span class="line"> |</span>
             <a class="menu" href="contact.html">Contact</a>
         </nav>
         <h1>Ella Corn's Bio</h1>
