--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -15,21 +15,21 @@
         <h1>Contact</h1>
         <div class="firstrow">
             <div class="address">
-                <h3>Ella Corn</h3>
+                <h2 class="contactname">Ella Corn</h2>
                 <p class="adtxt">505 Walnut Ave<br>Syracuse NY, 13210</p>
             </div>
             <div class="mail">
-                <a href="https://www.linkedin.com/in/ella-c-corn/" target="_blank">My LinkedIn Profile</a>
+                <a class="link" href="https://www.linkedin.com/in/ella-c-corn/" target="_blank">My LinkedIn Profile</a>
                 <a href="https://www.linkedin.com/in/ella-c-corn/">
                     <img src="../images/logo-sized.png" alt="linkedin logo">
                 </a>
                 <br>
-                <a href="mailto:eccorn@syr.edu">Email Me!</a> <br>
+                <a class="link" href="mailto:eccorn@syr.edu">Email Me!</a> <br>
             </div>
         </div>
         <div class="clear"></div>
         <div class="secondrow">
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.756469600322!2d-76.13400308471782!3d43.04655517914676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a761bd0b81%3A0x2b9129d843ac90a9!2s505%20Walnut%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1599511233820!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.748108595327!2d-76.13728348452183!3d43.04673107914671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a6e3d1786d%3A0x7182f1497ecad638!2sScholar%20Hotel%20Syracuse!5e0!3m2!1sen!2sus!4v1604164168522!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <br><br>
             <div class="emailform">
                 <form action="mailto:eccorn@syr.edu" method="post">
